landing page header when logged in box shadow issue reserve equipment filter search on all dashboard pages view jobsite responsive other ui changes

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -25,8 +25,7 @@
             </li> -->
             <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.quotaNReservations">
               <i class="fa fa-bookmark my-verti-icon"></i>
-              <span class="sidebar-heading">Quotes &amp;
-              Reservations</span></a></li>
+              <span class="sidebar-heading">Quotation</span></a></li>
             <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.makePayment">
               <i class="fa fa-usd my-verti-icon"></i>
               <span class="sidebar-heading">Make a Payment</span></a></li>
