--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -73,12 +73,12 @@
           </div>
           <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>-->
 
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quantity-btn all-btn">
-            <input type="text" ng-value="quantity" ng-model="quantity"/>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quantity-btn to-from-div">
+            <input type="text" ng-value="quantity" ng-model="quantity" class="form-control"/>
             <!--<a class="btn pull-right all-btn sign_mybtn primary-btn" href="" type="submit">Add Quantity</a>-->
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-            <a class="btn pull-right all-btn sign_mybtn primary-btn" ng-click="equipmentReserve()" type="submit">
+            <a class="btn all-btn sign_mybtn primary-btn" ng-click="equipmentReserve()" type="submit">
               <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
             </a>
           </div>
