--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -40,8 +40,8 @@
                   <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 treack_main_order">
-                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn">Track Order</button>
-                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn">Write a Review for Order</button>
+                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn">Track Equipment</button>
+                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn">Write a Review for Equipment</button>
                 </div>
               </div>
             </div>
@@ -68,15 +68,15 @@
                   <tbody>
                     <tr>
                       <td class="order-img-td"><img src="assets/images/order-history.jpg" alt=""></td>
-                      <td class="vertically-middle ">
+                      <td>
                         <h3 class="gas_title heading-text nomargin">{{order.title}}</h3>
                         <p class="nomargin">{{order.orderNo}}</p>
                         <h4 class="rent_title desc-text">Rented for {{order.RentedForDays}} Days</h4>
                         <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
                       </td>
                       <td class="vertically-middle text-right">
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Track Equipment</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Write a Review for Equipment</button>
                       </td>
                     </tr>
                     <tr>
@@ -88,8 +88,8 @@
                         <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
                       </td>
                       <td class="vertically-middle text-right">
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Track Equipment</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Write a Review for Equipment</button>
                       </td>
                     </tr>
                     <tr>
@@ -101,8 +101,8 @@
                         <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
                       </td>
                       <td class="vertically-middle text-right">
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Track Equipment</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Write a Review for Equipment</button>
                       </td>
                     </tr>
                     <tr>
@@ -114,8 +114,8 @@
                         <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
                       </td>
                       <td class="vertically-middle text-right">
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Track Equipment</button>
+                        <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth reserve-success-btn">Write a Review for Equipment</button>
                       </td>
                     </tr>
                   </tbody>
@@ -145,8 +145,8 @@
                 <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
               </div>
               <div class="col-xs-12 treack_main_order pull-center">
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Equipment</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Equipment</button>
               </div>
             </div>
             <div class="col-xs-12 nopadding orders-small">
@@ -162,8 +162,8 @@
                 <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
               </div>
               <div class="col-xs-12 treack_main_order pull-center">
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Equipment</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Equipment</button>
               </div>
             </div>
             <div class="col-xs-12 nopadding orders-small">
@@ -179,8 +179,8 @@
                 <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
               </div>
               <div class="col-xs-12 treack_main_order pull-center">
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
-                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Equipment</button>
+                <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Equipment</button>
               </div>
             </div>
           </uib-accordion-group>
