--- a/src/app/terms-and-conditions/terms-and-conditions-detail.html
+++ b/src/app/terms-and-conditions/terms-and-conditions-detail.html
@@ -1,4 +1,4 @@
-<div class="container content-top">
+<div class="container content-top terms-content-top">
 	<div class="row">
 		<div class="col-md-12" style="padding-top: 15px; padding-bottom: 15px;">
 			<p class="tc">
