--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -47,7 +47,7 @@
         <!-- START Location -->
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 about_part">
           <h4>Location</h4>
-          <p>
+          <p class="desc-text">
             Address Line, Address Line 2,<br>
             Address Line 3.<br>
             City, State.
@@ -57,7 +57,7 @@
         <!-- End Location -->
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
           <h4>Newsletter</h4>
-          <p>
+          <p class="desc-text">
             Get news on our latest promotions, products and services. We'll never share your email address and you can opt out any time
           </p>
           <input type="text" placeholder="Enter Your Email Id" class="form-control news-input">
