--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -1,65 +1,104 @@
 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
     Invoices
   </div>
   <div ng-show="flags.invoicesInProgress" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
     <load-indicator loading="flags.invoicesInProgress"></load-indicator>
   </div>
   <div ng-style="{'visibility': flags.invoicesInProgress ? 'hidden':'visible'}">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit">
-    <input type="text" placeholder="Search Invoices" ng-model="query" ng-change="fetchInvoices()" class="form-control pull-right mng-search-bar">
-    <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
-  </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col invoices-btn-div">
-    <button class="btn btn-default pull-right manage-job-btn deactivate list all-btn" ng-class="{'active primary-btn' : flags.outstanding}" ng-click="toggleInvoiceView(true)">Outstanding</button>
-    <button class="btn btn-default pull-right manage-job-btn deactivate map all-btn" ng-click="toggleInvoiceView(false)" ng-class="{'active primary-btn' : !flags.outstanding}">All Invoices</button>
-  </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding hidden-xs">
-    <table class="table table-striped quotes-table">
-      <thead>
-      <tr>
-        <th>Invoices</th>
-        <th>Job Sites</th>
-        <th>Contract #</th>
-        <th>Purchase Order</th>
-        <th>Total</th>
-        <th>Due Amount</th>
-        <th></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr ng-repeat="invoice in invoices">
-        <td><a href="" class="invoice-no">{{invoice.InvoiceID}}</a></td>
-        <td>{{invoice.Site_Name}}</td>
-        <td>{{invoice.Source}}</td>
-        <td>{{invoice.Purchase_Order_ID}}</td>
-        <td>{{invoice.Total}}</td>
-        <td>{{invoice.Balance}}</td>
-        <td>
-          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="col-xs-12 visible-xs">
-    <div ng-repeat="invoice in invoices" class="invoices-small">
-      <p class="bold-font desc-text">Invoice
-        <a href="#" class="invoice-no pull-right"><span># {{invoice.InvoiceID}}</span></a>
-      </p>
-      <p class="bold-font desc-text">{{invoice.Site_Name}}</p>
-      <p class="desc-text">{{invoice.Source}}</p>
-      <p class="desc-text bold-font">Total:&nbsp {{invoice.Total}}
-        <span class="desc-text bold-font pull-right">Due Amount{{invoice.Balance}}</span>
-      </p>
-      <div>
-        <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-eye white-color"></i>&nbsp View</button>
-        <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-download white-color"></i>&nbsp Download</button>
+    <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit">
+      <input type="text" placeholder="Search Invoices" ng-model="query" ng-change="fetchInvoices()" class="form-control pull-right mng-search-bar">
+      <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span>
+    </div> -->
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit job-site-list">
+      <i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>
+      <i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
+      <div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
+        <input type="text" placeholder="Invoice Id">
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
+          <div class="form-control search-div quotes-search searchShow">
+            <input type="text" placeholder="Invoice Id">
+          </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box job-site-list quotes-filter-div filter-arrow-box" ng-class="{'filter-show': showFilterDiv}">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <p class="desc-text">From Date</p>
+            <div class="form-control search-div select-date" ng-click="openDatepicker('from')">
+              <input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="from" is-open="queryFormData.from">
+              <i class="fa fa-calendar"></i>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <p class="desc-text">To Date</p>
+            <div class="form-control search-div select-date" ng-click="openDatepicker('to')">
+              <input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="to"  is-open="queryFormData.to">
+              <i class="fa fa-calendar"></i>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <p class="desc-text">Invoice</p>
+            <div class="form-control search-div select-date">
+              <input type="text" placeholder="Enter Invoice Keyword" ng-model="jobsite">
+              <i class="fa fa-marker"></i>
+            </div>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div text-right devider">
+            <button class="btn sign_mybtn all-btn primary-btn filter-btns">Apply</button>
+            <button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
+          </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col invoices-btn-div">
+      <button class="btn btn-default pull-right manage-job-btn deactivate list all-btn" ng-class="{'active primary-btn' : flags.outstanding}" ng-click="toggleInvoiceView(true)">Outstanding</button>
+      <button class="btn btn-default pull-right manage-job-btn deactivate map all-btn" ng-click="toggleInvoiceView(false)" ng-class="{'active primary-btn' : !flags.outstanding}">All Invoices</button>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding hidden-xs">
+      <table class="table table-striped quotes-table">
+        <thead>
+        <tr>
+          <th>Invoices</th>
+          <th>Job Sites</th>
+          <th>Contract #</th>
+          <th>Purchase Order</th>
+          <th>Total</th>
+          <th>Due Amount</th>
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="invoice in invoices">
+          <td><a href="" class="invoice-no">{{invoice.InvoiceID}}</a></td>
+          <td>{{invoice.Site_Name}}</td>
+          <td>{{invoice.Source}}</td>
+          <td>{{invoice.Purchase_Order_ID}}</td>
+          <td>{{invoice.Total}}</td>
+          <td>{{invoice.Balance}}</td>
+          <td>
+            <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+            <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-xs-12 visible-xs">
+      <div ng-repeat="invoice in invoices" class="invoices-small">
+        <p class="bold-font desc-text">Invoice
+          <a href="#" class="invoice-no pull-right"><span># {{invoice.InvoiceID}}</span></a>
+        </p>
+        <p class="bold-font desc-text">{{invoice.Site_Name}}</p>
+        <p class="desc-text">{{invoice.Source}}</p>
+        <p class="desc-text bold-font">Total:&nbsp {{invoice.Total}}
+          <span class="desc-text bold-font pull-right">Due Amount{{invoice.Balance}}</span>
+        </p>
+        <div>
+          <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-eye white-color"></i>&nbsp View</button>
+          <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-download white-color"></i>&nbsp Download</button>
+        </div>
       </div>
     </div>
   </div>
-    </div>
 </div>
