--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -306,15 +306,14 @@
               <ul>
                 <li>
                   <a href="/#/dashboard" class="marker">
-                    <i class="fa fa-tachometer fa-2x"></i>
-                    <span class="in-block invoice-no">Dashboard</span>
+                    <i class="fa fa-tachometer fa-2x white-color"></i>
                   </a>
                 </li>
               </ul>
             </div>
 
             <div class="btn-group drop-btn user-div hidden-xs">
-                <a href="#/FAQ" class="btn prof-btn about-caret">About</a>
+                <a href="#/FAQ" class="btn prof-btn about-caret white-color">About</a>
             </div>
           </div>
           <div class="nav navbar-nav navbar-right landing-header" ng-if="!userObj">
