--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -278,7 +278,7 @@
               </a>
             </div>
             <div class="req-call-div left-link-div visible-xs" ng-if="userObj">
-             <a href="#/FAQ" class="btn prof-btn about-caret nomargin nopadding">About</a>
+             <a href="#/FAQ" class="btn prof-btn about-caret nomargin nopadding invoice-no about-small">About</a>
             </div>
             <div class="sign-in-div left-link-div" ng-if="!userObj">
               <span class="glyphicon glyphicon-log-in hidden-xs"></span>
