my profile page, invoice detail page, links added on footer and header, quotation ui changes, data in cart details page for mobile

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -9,33 +9,42 @@
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" class="nomargin">
               <a data-toggle="pill" ui-sref="hm.dashboard.main" ng-click="closeFilter()">
                 <i class="fa fa-th-large my-verti-icon"></i>
-                <span class="sidebar-heading">Dashboard</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill"ui-sref="hm.dashboard.myCatalogue">
+                <span class="sidebar-heading">Dashboard</span>
+              </a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill"ui-sref="hm.dashboard.myCatalogue">
               <i class="fa fa-heart my-verti-icon catelog-icon"></i>
-              <span class="sidebar-heading">My Catalog</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.manageJobSite">
+              <span class="sidebar-heading">My Catalog</span></a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.manageJobSite">
               <i class="fa fa-map-marker my-verti-icon"></i>
-              <span class="sidebar-heading">Manage Job Sites</span></a></li>
+              <span class="sidebar-heading">Manage Job Sites</span></a>
+            </li>
             <!-- <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
               <span class="sidebar-heading">Manage My Account</span></a>
             </li> -->
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.quotaNReservations">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.quotaNReservations">
               <i class="fa fa-bookmark my-verti-icon"></i>
-              <span class="sidebar-heading">Quotation</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.makePayment">
+              <span class="sidebar-heading">Quotation</span></a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.makePayment">
               <i class="fa fa-usd my-verti-icon"></i>
-              <span class="sidebar-heading">Make a Payment</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.invoices">
+              <span class="sidebar-heading">Make a Payment</span></a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.invoices">
               <i class="fa fa-file my-verti-icon"></i>
-              <span class="sidebar-heading">View Invoices</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
-              <span class="sidebar-heading">Requests</span></a></li>
-            <li ui-sref-active="active" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.viewContracts"><i class="fa fa-briefcase my-verti-icon"></i>
-              <span class="sidebar-heading">View Contracts</span></a></li>
+              <span class="sidebar-heading">View Invoices</span></a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
+              <span class="sidebar-heading">Requests</span></a>
+            </li>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.viewContracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
+              <span class="sidebar-heading">View Contracts</span></a>
+            </li>
 
           </ul>
 
