--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -25,10 +25,10 @@
           </button>
           <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu">
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/dashboard">Dashboard</a></li>
-            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Recent Orders</a></li>
+            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Purchases</a></li>
-            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li>
-            <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/logout">Settings</a></li>
+            <!-- <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li> -->
+            <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/user/profile">Profile Settings</a></li>
             <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/help">Help</a></li>
             <li role="presentation" class="list-group-item bottomborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
           </ul>
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li>
-              <a href="#/shopping-cart" class="marker">
+              <a href="#/shopping-cart/details" class="marker">
                 <i class="fa fa-shopping-cart fa-2x marker"></i></a>
               <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
             </li>
@@ -66,7 +66,7 @@
         <div ng-if="!userObj" class="not-user-div cart_menu">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
-          <a href="#/shopping-cart" class="marker">
+          <a href="#/shopping-cart/details" class="marker">
           <i class="fa fa-shopping-cart fa-2x marker"></i></a>
           <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
         </div>
@@ -100,10 +100,10 @@
           </button>
           <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu">
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/dashboard">Dashboard</a></li>
-            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Recent Orders</a></li>
+            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Purchases</a></li>
-            <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li>
-            <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/logout">Settings</a></li>
+            <!-- <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li> -->
+            <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/user/profile">Profile Settings</a></li>
             <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/help">Help</a></li>
             <li role="presentation" class="list-group-item bottomborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
           </ul>
