--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -302,7 +302,7 @@
               </ul>
             </div>
 
-            <div class="cart_menu hidden-xs" ng-if="userObj">
+            <!-- <div class="cart_menu hidden-xs" ng-if="userObj">
               <ul>
                 <li>
                   <a href="/#/dashboard" class="marker">
@@ -310,10 +310,10 @@
                   </a>
                 </li>
               </ul>
-            </div>
+            </div> -->
 
             <div class="btn-group drop-btn user-div hidden-xs">
-                <a href="#/FAQ" class="btn prof-btn about-caret white-color">About</a>
+                <a href="#/FAQ" class="btn prof-btn about-caret white-color about-large">About</a>
             </div>
           </div>
           <div class="nav navbar-nav navbar-right landing-header" ng-if="!userObj">
@@ -651,11 +651,11 @@
               <ul>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Board of Directors</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Press Releases</a></li>
-                <li><a href="#">Financial Reports</a></li>
-                <li><a href="#">2015 Annual Meeting</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#/FAQ">FAQ</a></li>
+                <li><a href="#/press-releases">Press Releases</a></li>
+                <li><a href="#/financial-reports">Financial Reports</a></li>
+                <li><a href="#/annual-meeting">2015 Annual Meeting</a></li>
+                <li><a href="#/contact-us">Contact Us</a></li>
               </ul>
             </div>
           </div>
