--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -195,9 +195,9 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog view-jobsite-modal" role="document">
     <div class="modal-content">
-      <div class="modal-header nosearch-row bottompadding">
+      <div class="modal-header no-search-row noborder leftpadding rightpadding">
         <div class="col-md-12 col1 ">
-          <p class="heading-text">Jobsite<a class="close-cross pull-right"  data-dismiss="modal" aria-label="Close"><i class="fa fa-times marker on-hover-pointer"></i></a></p>
+          <p>Jobsite<a class="close-cross pull-right"  data-dismiss="modal" aria-label="Close"><i class="fa fa-times marker on-hover-pointer"></i></a></p>
         </div>
       </div>
       <div class="modal-body  job-site-detail view-jobsite">
@@ -212,9 +212,9 @@
         <span class="marker go-back-text">+1 657 657 5678</span>
         <br>
         <i class="fa fa-user marker go-back-text"></i>
-                        <span class="marker go-back-text">
-                          Name of Contact Person
-                        </span>
+          <span class="marker go-back-text">
+            Name of Contact Person
+          </span>
       </div>
     </div>
   </div>
