--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -71,54 +71,20 @@
           </div>
           <!-- mobile shopping cart -->
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding hidden-lg hidden-md">
-            <div class="cart-for-mobile">
+            <div class="cart-for-mobile" ng-repeat="product in cart.Product">
               <div class="cart-image-div">
                 <i class="fa fa-truck fa-4x"></i>
               </div>
               <div class="equipment-desc">
-                <h3>Electric Equipment Wide-16 "</h3>
+                <h3>{{product.Product_name}}</h3>
                 <input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
                 <p class="qty-head">Quantity</p>
-                <input class="form-control" type="text" value="1">
-                <i class="fa fa-map-marker marker"></i>
+                <input class="form-control" type="text" ng-model="cartData[product.Product_id].qty">
+                <!-- <i class="fa fa-map-marker marker"></i>
                 <span>Bay Area, Houstan</span>
-                <span class="pull-right"><a href="#/update-job-site">Update</a></span>
-                <p class="sub-total">Sub-Total: &nbsp $3556
-                  <span class="pull-right"><a href="">Delete</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="cart-for-mobile">
-              <div class="cart-image-div">
-                <i class="fa fa-truck fa-4x"></i>
-              </div>
-              <div class="equipment-desc">
-                <h3>Electric Equipment Wide-16 "</h3>
-                <input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
-                <p class="qty-head">Quantity</p>
-                <input class="form-control" type="text" value="1">
-                <!-- <i class="fa fa-map-marker marker"></i>
-                                <span>Bay Area, Houstan</span>
-                                <span class="pull-right"><a href="#/update-job-site">Update</a></span> -->
-                <p class="sub-total">Sub-Total: &nbsp $3556
-                  <span class="pull-right"><a href="">Delete</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="cart-for-mobile">
-              <div class="cart-image-div">
-                <i class="fa fa-truck fa-4x"></i>
-              </div>
-              <div class="equipment-desc">
-                <h3>Electric Equipment Wide-16 "</h3>
-                <input type="checkbox" style="margin: 3px 0 0 0;"><span class="marker">Allow Substitution?</span>
-                <p class="qty-head">Quantity</p>
-                <input class="form-control" type="text" value="1">
-                <!-- <i class="fa fa-map-marker marker"></i>
-                                <span>Bay Area, Houstan</span>
-                                <span class="pull-right"><a href="#/update-job-site">Update</a></span> -->
-                <p class="sub-total">Sub-Total: &nbsp $3556
-                  <span class="pull-right"><a href="">Delete</a></span>
+                <span class="pull-right"><a href="#/update-job-site">Update</a></span> -->
+                <p class="sub-total">Sub-Total: &nbsp ${{product.Product_rate}}
+                  <span class="pull-right"><a ng-click="deleteProductFromCart(product.Product_id)">Delete</a></span>
                 </p>
               </div>
             </div>
