--- a/src/app/prelogin-footer/footer.html
+++ b/src/app/prelogin-footer/footer.html
@@ -23,11 +23,11 @@
               <ul>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Board of Directors</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Press Releases</a></li>
-                <li><a href="#">Financial Reports</a></li>
-                <li><a href="#">2015 Annual Meeting</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#/FAQ">FAQ</a></li>
+                <li><a href="#/press-releases">Press Releases</a></li>
+                <li><a href="#/financial-reports">Financial Reports</a></li>
+                <li><a href="#/annual-meeting">2015 Annual Meeting</a></li>
+                <li><a href="#/contact-us">Contact Us</a></li>
               </ul>
             </div>
           </div>
