--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -1,136 +1,225 @@
-<section class="content-top">
-  <div class="portal-access-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 class="catelog-icon">Profile
-            <a href="#/change/password" class="pull-right change-pass">Change Password</a>
-          </h3>
-        </div>
-      </div>
-    </div>
-  </div>
-  <article class="main-cantain" >
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <form class="prof-form">
-            <h4>First name</h4>
-            <input type="text" placeholder="First Name" class="form-control">
+<!-- <section class="content-top">
+	<div class="portal-access-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h3 class="catelog-icon">Profile
+						<a href="#/change/password" class="pull-right change-pass">Change Password</a>
+					</h3>
+				</div>
+			</div>
+		</div>
+	</div>
+	<article class="main-cantain" >
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<form class="prof-form">
+						<h4>First name</h4>
+						<input type="text" placeholder="First Name" class="form-control">
 
-            <h4>Last name</h4>
-            <input type="text" placeholder="Last Name" class="form-control">
+						<h4>Last name</h4>
+						<input type="text" placeholder="Last Name" class="form-control">
 
-            <h4>Password</h4>
-            <input type="password" placeholder="Password" class="form-control">
+						<h4>Password</h4>
+						<input type="password" placeholder="Password" class="form-control">
 
-            <h4>City</h4>
-            <input type="text" placeholder="City" class="form-control">
+						<h4>City</h4>
+						<input type="text" placeholder="City" class="form-control">
 
-            <h4>State</h4>
-            <input type="text" placeholder="State" class="form-control">
+						<h4>State</h4>
+						<input type="text" placeholder="State" class="form-control">
 
-            <h4>Country</h4>
-            <input type="text" placeholder="Country" class="form-control">
+						<h4>Country</h4>
+						<input type="text" placeholder="Country" class="form-control">
 
-            <h4>Zip code</h4>
-            <input type="text" placeholder="Zip Code" class="form-control">
+						<h4>Zip code</h4>
+						<input type="text" placeholder="Zip Code" class="form-control">
 
-            <div class="submt-btn-div">
-              <input type="submit" type="submit" value="Update" class="btn sign_mybtn all-btn primary-btn">
-            </div>
-          </form>
-        </div>
-        <!--<h4>User Profile Page</h4>-->
-        <!-- <tabset>
-          <tab select="alertMe()">
-            <tab-heading>
-              <i class="glyphicon glyphicon-bell"></i> Profile
-            </tab-heading>
-            <form class="form-horizontal">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Last Name</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Address</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">City</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">State</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Country</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Zipcode</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Sign in</button>
-                </div>
-              </div>
-            </form>
-          </tab>
-          <tab select="alertMe()">
-            <tab-heading>
-              <i class="glyphicon glyphicon-bell"></i> Change Password
-            </tab-heading>
-            <form class="form-horizontal">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" readonly="true" disabled="disabled" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Update</button>
-                </div>
-              </div>
-            </form>
+						<div class="submt-btn-div">
+							<input type="submit" type="submit" value="Update" class="btn sign_mybtn all-btn primary-btn">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</article>
+</section> -->
+<div class="container content-top">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small shopping-cart-heading">
+			Profile Settings
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<ul class="nav nav-tabs gride-tab root-category">
+				<li class="active">
+					<a tabtoggle data-toggle="tab" href="#profile-details">Profile Details</a>
+				</li>
+				<li>
+					<a tabtoggle data-toggle="tab" href="#portal-settings">Portal Settings</a>
+				</li>
+				<li>
+					<a tabtoggle data-toggle="tab" href="#security">Security</a>
+				</li>
+			</ul>
+		</div>
+		<!-- Profile Details -->
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active" id="profile-details">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="First Name">
+						<i class="fa fa-user"></i>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Last Name">
+						<i class="fa fa-user"></i>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Email">
+						<i class="fa fa-envelope-o"></i>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Phone Number">
+						<i class="fa fa-phone"></i>
+					</div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Company Name">
+						<i class="fa fa-building-o"></i>
+					</div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Communication Address">
+						<i class="fa fa-map-marker"></i>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="City">
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="Zip Code">
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
+					<div class="form-control search-div">
+						<input type="text" placeholder="State">
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div"></div>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-detail pull-center">
+				<div class="upload-pic-div">
+					<i class="fa fa-user user-pic"></i>
+					<button class="btn all-btn sign_mybtn primary-btn fullwidth"><i class="fa fa-upload"></i> &nbsp Upload Picture</button>
+				</div>
+			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+				<button class="btn sign_mybtn all-btn primary-btn">Save</button>
+				<button class="btn sell-equ all-btn cont-renting">
+					Cancel
+				</button>
+			</div>
+		</div>
 
-          </tab>
-        </tabset> -->
-        <!-- {{userDetails | json}} -->
-      </div>
-    </div>
-  </article>
-</section>
+		<!-- Portal Settings -->
+		<div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist">
+			<div class="row fields-row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
+						<h3 class="desc-text bold-font">Portal Credentials</h3>
+						<div class="form-control search-div">
+							<input type="text" placeholder="Email">
+							<i class="fa fa-envelope-o"></i>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+						<div class="form-control search-div">
+							<input type="password" placeholder="Password">
+							<i class="fa fa-key"></i>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right change-portal-credentials">
+					<a class="desc-text invoice-no">Change Credentials</a>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profile-setting portal-security-ques">
+					<h3 class="desc-text bold-font">Portal Security Question</h3>
+					<p class="desc-text">Recovery Email: 
+						<input class="form-control" placeholder="Email">
+					</p>
+					<p class="desc-text">Security Question:</p>
+					<p class="desc-text">Security Answer:
+						<input class="form-control" placeholder="Answer">
+					</p>
+				</div>
+			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+				<button class="btn sign_mybtn all-btn primary-btn">Save</button>
+				<button class="btn sell-equ all-btn cont-renting">
+					Cancel
+				</button>
+			</div>
+		</div>
+
+		<!-- Security -->
+		<div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist">
+			<div class="row fields-row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
+					<div class="form-control search-div security-input">
+						<input type="password" placeholder="Old Password">
+						<i class="fa fa-key"></i>
+					</div>
+				</div>
+			</div>
+			<div class="row fields-row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+						<div class="form-control search-div">
+							<input type="password" placeholder="New Password">
+							<i class="fa fa-key"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row fields-row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding portal-setting">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+						<div class="form-control search-div">
+							<input type="password" placeholder="Confirm Password">
+							<i class="fa fa-key"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
+					<button class="btn sign_mybtn all-btn primary-btn">Save</button>
+					<button class="btn sell-equ all-btn cont-renting">
+						Cancel
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
